<resources>
    <string name="app_name">theMoviesApp</string>

    <!-- Layout - Main Activity -->
    <string name="introduceMovie">Introduce movie name </string>

    <!-- Layout - Item Movie (Item recyclerView) -->
    <string name="waitingTitle"> *Waiting Title* </string>

    <!-- Layout - Movie Description Activity -->
    <string name="titleMovie">Title movie</string>
    <string name="loadContent">*Waiting content*</string>
    <string name="descriptionMovie">Description</string>
    <string name="releaseDateMovie">Release Date: </string>
    <string name="languageMovie">Language: </string>
    <string name="popularityMovie">Popularity: </string>
    <string name="genresMovie">Genres: </string>
    <string name="adultMovie">Age: </string>
    <string name="durationMovie">Duration: </string>
    <string name="voteMovie">Vote Average: </string>
    <string name="leaveRate">Rate the movie: </string>

    <!-- MainActivity -->
    <string name="successClearingMovies">Reseting content</string>
    <string name="errorClearingMovies">Something went wrong. Try later</string>
    <string name="movieNotFound">Sorry, We could not find your movie</string>
    <string name="informationErrorButton">Try later</string>
    <string name="informationError">Error loading movies</string>
    <string name="errorRetrieveMoreMovies">No pudimos recuperar mas peliculas. Intente mas tarde</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Home Fragment -->
    <string name="hello">Hello,</string>
    <string name="nameUser">Andres A.</string>
    <string name="comingSoon">Coming Soon</string>
    <string name="releaseDate">11 october 2022</string>

    <string name="topRatedMovies">Top Rated</string>
    <string name="popularMovies">Popular</string>
    <string name="upcomingMovies">Upcoming</string>

    <!-- Item Popular Movie -->
    <string name="titleMovieHome">Fall</string>
    <string name="descriptionMovieHome">11.11.2022</string>
</resources>